修练习32和28的makefile

--- a/ex32.md
+++ b/ex32.md
@@ -3,6 +3,8 @@
 > 原文：[Exercise 32: Double Linked Lists](http://c.learncodethehardway.org/book/ex32.html)
 
 > 译者：[飞龙](https://github.com/wizardforcel)
+>
+> [ye-rm](https://github.com/ye-rm)在2025/3/11重校
 
 这本书的目的是教给你计算机实际上如何工作，这也包括多种数据结构和算法函数。计算机自己其实并没有太大用处。为了让它们做一些有用的事情，你需要构建数据，之后在这些结构上组织处理。其它编程语言带有实现所有这些结构的库，或者带有直接的语法来创建它们。C需要你手动实现所有数据结构，这使它成为最“完美”的语言，让你知道它们的工作原理。
 
@@ -469,17 +471,17 @@ $
 
 ## 如何改进
 
-我打算告诉你如何改进代码，而不是使它崩溃。
+与其破坏这段代码，我将告诉你如何改进它：
 
-+ 你可以使用`LIST_FOREACH`并在循环中调用`free`来使`List_clear_destroy`更高效。
-+ 你可以为一些先决条件添加断言，使其部结构`NULL`值作为`List *list`的参数。
-+ 你可以添加不变了，来检查列表的内容始终正确，例如`count`永远不会`< 0`，如果`count > 0`，`first`不为`NULL`。
-+ 你可以向头文件添加文档，在每个结构、函数和宏之前添加描述其作用的注释。
+- 你可以通过使用 `LIST_FOREACH` 并在一个循环内同时进行两次 `free` 调用来使 `List_clear_destroy` 更高效。
+- 你可以添加断言来检查前置条件，以确保程序不会接收到 `List *list` 参数为 `NULL` 的情况。
+- 你可以添加不变量来检查链表内容的正确性，例如 `count` 永远不会小于 0，并且如果 `count > 0`，那么 `first` 不会是 `NULL`。
+- 你可以在头文件中以注释的形式为每个结构体、函数和宏添加文档，描述它们的作用。
 
 这些改进执行了防御性编程实践，并且“加固”了代码来避免错误或使用不当。马上去做这些事情，之后找到尽可能多的办法来改进代码。
 
 ## 附加题
 
-+ 研究双向和单向链表，以及什么情况下其中一种优于另一种。
-+ 研究双向链表的限制。例如，虽然它们对于插入和删除元素很高效，但是对于变量元素比较慢。
-+ 还缺少什么你能想到的操作？比如复制、连接、分割等等。实现这些操作，并且为它们编写单元测试。
++ 研究双向链表与单向链表的区别，以及在什么情况下一种链表比另一种更适用。
++ 研究双向链表的局限性。例如，虽然它们在插入和删除元素时效率很高，但在遍历所有元素时却非常慢。
++ 你能想到哪些可能需要的操作？例如复制、连接和拆分等操作。实现这些操作并为它们编写单元测试。
