--- a/ex18.md
+++ b/ex18.md
@@ -3,6 +3,8 @@
 > 原文：[Exercise 18: Pointers To Functions](http://c.learncodethehardway.org/book/ex18.html)
 
 > 译者：[飞龙](https://github.com/wizardforcel)
+>
+> [ye-rm](https://github.com/ye-rm)在2025/3/12重校
 
 函数在C中实际上只是指向程序中某一个代码存在位置的指针。就像你创建过的结构体指针、字符串和数组那样，你也可以创建指向函数的指针。函数指针的主要用途是向其他函数传递“回调”，或者模拟类和对象。在这个练习中我们会创建一些回调，并且下一节我们会制作一个简单的对象系统。
 
@@ -229,7 +231,7 @@ $
 
 ## 如何使它崩溃
 
-我打算让你做一些奇怪的事情来使它崩溃，这些函数指针都是类似于其它指针的指针，他们都指向内存的一块区域。C中可以将一种指针的指针转换为另一种，以便以不同方式处理数据。这些通常是不必要的，但是为了想你展示如何侵入你的电脑，我希望你把这段代码添加在`test_sorting`下面：
+我要让你做一些有点奇怪的操作来破坏这个程序。这些函数指针和其他指针一样，它们指向内存块。C 语言有将一个指针转换为另一个指针的能力，这样你就可以用不同的方式处理数据。通常这没有必要，但为了向你展示如何对计算机进行一些 “黑客操作”，我希望你在`test_sorting`函数的末尾添加以下内容：
 
 ```c
 unsigned char *data = (unsigned char *)cmp;
@@ -253,6 +255,6 @@ printf("\n");
 
 + 用十六进制编辑器打开`ex18`，接着找到函数起始处的十六进制代码序列，看看是否能在原始程序中找到函数。
 + 在你的十六进制编辑器中找到更多随机出现的东西并修改它们。重新运行你的程序看看发生了什么。字符串是你最容易修改的东西。
-+ 将错误的函数传给`compare_cb`，并看看C编辑器会报告什么错误。
++ 将错误的函数传给`compare_cb`，并看看C编译器会报告什么错误。
 + 将`NULL`传给它，看看程序中会发生什么。然后运行`Valgrind`来看看它会报告什么。
 + 编写另一个排序算法，修改`test_sorting`使它接收任意的排序函数和排序函数的比较回调。并使用它来测试两种排序算法。
