--- a/ex34.md
+++ b/ex34.md
@@ -372,7 +372,7 @@ error:
 
 ## 附加题
 
-+ 改进单元测试来覆盖耕作操作，并使用`for`循环来测试迭代。
-+ 研究`DArray`上如何实现冒泡排序和归并排序，但是不要马上实现它们。我会在下一张实现`DArray`的算法，之后你可以完成它。
-+ 为一些常用的操作编写一些性能测试，并与`List`中的相同操作比较。你已经做过很多次了，但是这次需要编写重复执行所涉及操作的单元测试，之后在主运行器中计时。
-+ 观察`DArray_expand`如何使用固定增长（`size + 300`）来实现。通常动态数组都以倍数增长（`size * 2`）的方式实现，但是我发现它会花费无用的内存并且没有真正取得性能收益。测试我的断言，并且看看什么情况下需要倍数增长而不是固定增长。
++ 改进单元测试，以涵盖更多操作，并使用 for 循环进行测试，确保它们能正常工作。
++ 研究为动态数组（DArray）实现冒泡排序和归并排序需要做些什么，但暂时先不要动手实现。我接下来会讲解动态数组的算法，到时候你再做这个。
++ 为常见操作编写一些性能测试，并将其与链表（List）中的相同操作进行比较。你之前已经做过一些类似的比较，但这次要编写一个单元测试，反复执行相关操作，然后在主运行程序中进行计时。
++ 观察`DArray_expand`函数是如何通过常量增加（大小 + 300）来实现的。通常，动态数组是通过乘法增加（大小 ×2）来实现的，但我发现这种方式会在没有实际性能提升的情况下浪费不必要的内存。测试我的这个观点，看看在什么情况下你会希望使用乘法增加而不是常量增加。
