--- a/ex44.md
+++ b/ex44.md
@@ -3,6 +3,8 @@
 > 原文：[Exercise 44: Ring Buffer](http://c.learncodethehardway.org/book/ex44.html)
 
 > 译者：[飞龙](https://github.com/wizardforcel)
+>
+> [ye-rm](https://github.com/ye-rm)在2025/3/13重校
 
 环形缓冲区在处理异步IO时非常实用。它们可以在一端接收随机长度和区间的数据，在另一端以相同长度和区间提供密致的数据块。它们是`Queue`数据结构的变体，但是它针对于字节块而不是一系列指针。这个练习中我打算向你展示`RingBuffer`的代码，并且之后你需要对它执行完整的单元测试。
 
@@ -194,3 +196,5 @@ $
 + 创建`RingBuffer`的替代版本，使用POSIX的技巧并为其执行单元测试。
 + 为二者添加一个性能对比测试，通过带有随机数据和随机读写操作的模糊测试来比较两个版本。确保你你对每个版本进行了相同的操作，便于你在操作之间比较二者。
 + 使用`callgrind` 和 `cachegrind`比较二者的性能。
+
+> 此处推荐我搬运的[使用posix api实现高性能循环/环形缓冲区](https://zhuanlan.zhihu.com/p/29999700841)
